<resources>
    <string name="app_name">Marvel</string>
    <string name="detalhe_name">Detalhes</string>
    <string name="informacoes_name">Marvel Studios</string>
    <string name="texto_home">Olá %1$s, esses são alguns dos personagens da Marvel!</string>
    <string name="lista_nome_heroi">Nome do heroi</string>
    <string name="texto_detalhe_descricao">Rogue é uma mutante Nível Ômega, personagem de histórias em quadrinhos da editora Marvel Comics. Vampira é integrante de algumas equipes dos X-Men e dos Vingadores</string>
    <string name="texto_informacoes_marvel">Informações sobre a Marvel</string>
    <string name="description_image_splash">Imagem com os personagens da Marvel</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="create_account_txt">Crie sua conta agora</string>
    <string name="login_txt">login</string>
    <string name="nome_txt">Nome</string>
    <string name="registrar_conta_txt">registrar conta</string>
    <string name="exit">sair</string>
</resources>